# protobuf-pbop-plugin

./: .gitignore  CHANGES  CMakeLists.txt  INSTALL.md  LICENSE  README.md  appveyor.yml  project_names.md  references.md
ci/appveyor/: build_demo_greetings.bat  build_project.bat  emulate_appveyor.bat  install_bin2cpp.bat  install_glog.bat  install_googletest.bat  install_protobuf.bat  install_rapidassist.bat  install_zlib.bat  replace_inplace.vbs  test_demo_greetings.bat  test_script.bat
cmake/: pbop-config-version.cmake.in  pbop-config.cmake.in  pbop-functions.cmake  protobufpipeplugin-config-version.cmake.in  protobufpipeplugin-config.cmake.in
demo/Calculator/: Calculator.sln
demo/Calculator/Calculator/: Calculator.vcxproj  Calculator.vcxproj.filters  calculator.pb.cc  calculator.pb.h  calculator.pipe.pb.cpp  calculator.pipe.pb.h  calculator.proto  main.cpp
demo/Calculator/libProtobufPipePlugin/: Connection.cpp  Connection.h  PipeMessages.pb.cc  PipeMessages.pb.h  PipeMessages.proto  Server.cpp  Server.h  Service.h  Status.cpp  Status.h  libProtobufPipePlugin.vcxproj  libProtobufPipePlugin.vcxproj.filters
demo/Greetings/: CMakeLists.txt  greetings.proto
demo/Greetings/src/: client.cpp  server.cpp
docs/: Doxyfile.in  protobuf-pbop-plugin.xcf  protobuf-pipe-plugin.xcf
include/libProtobufPipePlugin/: Connection.h  Server.h  Status.h
include/pbop/: BufferedConnection.h  Connection.h  CriticalSection.h  Events.h  Mutex.h  PipeConnection.h  ReadWriteLock.h  ScopeLock.h  Server.h  Service.h  Status.h  Thread.h  ThreadBuilder.h  Types.h  pbop.proto
src/libPipe/: CMakeLists.txt  DebugPrinter.cpp  DebugPrinter.h  StreamPrinter.cpp  StreamPrinter.h  libpipe.cpp  libpipe.h  path.cpp  path.h  protofunc.cpp  protofunc.h  stringfunc.cpp  stringfunc.h
src/libProtobufPipePlugin/: CMakeLists.txt  Connection.cpp  Connection.h  Server.cpp  Server.h  Service.h  Status.cpp  Status.h  libpipe.cpp  libpipe.h
src/pbop/: BufferedConnection.cpp  CMakeLists.txt  Connection.cpp  CriticalSection.cpp  Events.cpp  Mutex.cpp  PipeConnection.cpp  ReadWriteLock.cpp  ScopeLock.cpp  Server.cpp  Status.cpp  pbop.cpp  pbop.h
src/protobuf-pbop-plugin/: CMakeLists.txt  PluginCodeGenerator.cpp  config.h.in  main.cpp  version.h.in
src/protobuf-pipe-plugin/: CMakeLists.txt  DebugPrinter.h  PluginCodeGenerator.cpp  PluginCodeGenerator.h  StreamPrinter.cpp  config.h.in  main.cpp  version.h.in
test/protobuf-pbop-plugin-unittest/: CMakeLists.txt  TestBufferedConnection.cpp  TestBufferedConnection.h  TestClient.cpp  TestClient.h  TestErrorPropragation.cpp  TestErrorPropragation.h  TestErrorPropragation.proto  TestMultithreadedCalls.cpp  TestMultithreadedCalls.h  TestMultithreadedCalls.proto  TestPerformance.cpp  TestPerformance.h  TestPerformance.proto  TestPipeConnection.cpp  TestPipeConnection.h  TestPluginRun.h  TestProtoFunctions.h  TestReadWriteLock.cpp  TestReadWriteLock.h  TestServer.cpp  TestStatus.cpp  TestStatus.h  TestThread.cpp  TestThread.h  TestUtils.cpp  TestUtils.h  main.cpp
test/protobuf-pipe-plugin-unittest/: CMakeLists.txt  TestBuildFull.cpp  TestBuildFull.h  TestBuildFull.proto  TestBuildQuick.cpp  TestBuildQuick.h  TestBuildQuick.proto  TestCalculator.cpp  TestCalculator.h  TestCalculator.proto  TestDemo.cpp  TestDemo.h  TestDemo.proto  TestPath.cpp  TestPath.h  TestPluginRun.cpp  TestPluginRun.h  TestPluginRun.proto  TestProtoFunctions.cpp  TestProtoFunctions.h  TestServer.cpp  TestServer.h  TestStringFunctions.cpp  TestStringFunctions.h  TestUtils.cpp  TestUtils.h  TestVoidMessages.cpp  TestVoidMessages.h  TestVoidMessages.proto  gtesthelper.cpp  gtesthelper.h  main.cpp  protobuf_locator.cpp.in  protobuf_locator.h  testutils.cpp  testutils.h
